--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -9,7 +9,8 @@
   "author": "himanshu sharma",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "socket.io": "^4.0.2"
-    
   }
 }
